--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:13:32.869859Z",
@@ -318,7 +318,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "109ccd991dc34fe79cfc1673f91dca16",
+       "model_id": "d6c3f56d4979487b95a59e625404f531",
        "version_major": 2,
        "version_minor": 0
       },
@@ -336,6 +336,9 @@
     "import numpy as np\n",
     "import numpy.random as rnd\n",
     "import pandas as pd\n",
+    "\n",
+    "\n",
+    "mostrar_ajuste1 = widgets.Checkbox(value=False, indent=True, description=\"Mostrar línea de tendencia\")\n",
     "\n",
     "\n",
     "region = widgets.Dropdown(options=sorted([key for key in nodes]),\n",
@@ -361,7 +364,7 @@
     "\n",
     "\n",
     "\n",
-    "def mostrar_curva(region,start,end,tipoescala):\n",
+    "def mostrar_curva(region,start,end,tipoescala, mostrar_tendencia):\n",
     "    data_confirmed = nodes[region][\"curve_confirmed\"]\n",
     "    data_death = nodes[region][\"curve_deaths\"]\n",
     "    data_recovered = nodes[region][\"curve_recovered\"]\n",
@@ -378,14 +381,16 @@
     "    try:\n",
     "        fit = np.polyfit(ts-ts[0],lnvalues, 1, cov=False)\n",
     "        print(\"t duplicación:\", np.log(2.)/fit[0], \" ordenada al origen:\",np.exp(fit[1]))\n",
-    "        plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=region)\n",
+    "        if mostrar_tendencia:\n",
+    "            plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=region)\n",
     "    except:\n",
     "        pass\n",
     "    plt.yscale(tipoescala)\n",
     "    plt.title(\"Número de casos activos en \" + region)\n",
     "    plt.show()\n",
     "    \n",
-    "interact=widgets.interact(mostrar_curva,region=region,start=startday,end=endday,tipoescala=tipoescala)"
+    "interact=widgets.interact(mostrar_curva,region=region,start=startday,end=endday,tipoescala=tipoescala,\n",
+    "                         mostrar_tendencia=mostrar_ajuste1)"
    ]
   },
   {
@@ -407,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:57:14.242418Z",
@@ -420,7 +425,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1af93437f2394baa945d96d167fa0869",
+       "model_id": "7da9d19d134c405c9c2fe38dbee5ce8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -435,7 +440,7 @@
    "source": [
     "\n",
     "\n",
-    "def mostrar_curva2(region,start,end,tipoescala):\n",
+    "def mostrar_curva2(region,start,end,tipoescala,mostrar_ajuste):\n",
     "    data_confirmed = nodes[region][\"curve_confirmed\"]\n",
     "    data_death = nodes[region][\"curve_deaths\"]\n",
     "    data_recovered = nodes[region][\"curve_recovered\"]\n",
@@ -459,7 +464,8 @@
     "    try:\n",
     "        fit = np.polyfit(ts-ts[0],lnvalues, 1, cov=False)\n",
     "        print(\"Tiempo característico :\", 1/fit[0], \"dias.  Ordenada a t_0:\",np.exp(fit[1]))\n",
-    "        plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=region)\n",
+    "        if mostrar_ajuste:\n",
+    "            plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=region)\n",
     "    except:\n",
     "        pass\n",
     "    plt.yscale(tipoescala)\n",
@@ -491,7 +497,12 @@
     "    ensure_option=True,\n",
     "    disabled=False)\n",
     "\n",
-    "interact=widgets.interact(mostrar_curva2,region=region2,start=startday2,end=endday2,tipoescala=tipoescala2)\n"
+    "mostrar_ajuste2 = widgets.Checkbox(value=False, indent=True, description=\"Mostrar línea de tendencia\")\n",
+    "\n",
+    "interact=widgets.interact(mostrar_curva2, region=region2,start=startday2,end=endday2,tipoescala=tipoescala2,\n",
+    "                         mostrar_ajuste=mostrar_ajuste2)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
