--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:12:29.967684Z",
@@ -44,16 +44,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:131: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:131: RuntimeWarning: invalid value encountered in true_divide\n",
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:115: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "/srv/conda/envs/notebook/lib/python3.7/site-packages/ipykernel_launcher.py:115: RuntimeWarning: invalid value encountered in double_scalars\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -62,6 +52,10 @@
     }
    ],
    "source": [
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "from IPython.display import HTML\n",
     "import pandas\n",
     "import json\n",
@@ -304,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:13:32.869859Z",
@@ -318,7 +312,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6c3f56d4979487b95a59e625404f531",
+       "model_id": "3a15a9ee933e40e2818b30f682135b69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -412,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:57:14.242418Z",
@@ -425,7 +419,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7da9d19d134c405c9c2fe38dbee5ce8a",
+       "model_id": "85e58f55f9df47eb893e2a21a1da871a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -504,6 +498,128 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-13T16:57:14.242418Z",
+     "start_time": "2020-08-13T16:57:13.780115Z"
+    },
+    "hide_input": false,
+    "init_cell": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a78b5a799c84449a40033174260e609",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def mostrar_curva3(region,start,end,tipoescala,mostrar_ajuste):\n",
+    "    data_confirmed = nodes[region][\"curve_confirmed\"]\n",
+    "    data_death = nodes[region][\"curve_deaths\"]\n",
+    "    data_recovered = nodes[region][\"curve_recovered\"]\n",
+    "    activos = data_confirmed-data_death-data_recovered\n",
+    "    newrecovered = data_recovered[1:]-data_recovered[:-1] # +data_deaths[1:]-data_deaths[:-1]\n",
+    "    newdeaths = data_deaths[1:]-data_deaths[:-1] # +data_deaths[1:]-data_deaths[:-1]\n",
+    "    newinfected = data_confirmed[1:]-data_confirmed[:-1]\n",
+    "    newconfirmed = data_confirmed[1:]-data_confirmed[:-1]\n",
+    "    ts = np.array(range(len(newinfected)))\n",
+    "    \n",
+    "    values = newconfirmed/activos[1:]\n",
+    "    ts = ts[start:end]\n",
+    "    values = values[start:end]    \n",
+    "    ts = ts[(~np.isnan(values))]\n",
+    "    values = values[(~np.isnan(values))]\n",
+    "    ts = ts[values>0]\n",
+    "    values = np.log(2)/values[values>0]\n",
+    "    lnvalues = np.log(values)\n",
+    "    fig, ax1 = plt.subplots()\n",
+    "    ln1 = ax1.scatter(ts, values,label=\"$\\\\tau$\",color=\"blue\")\n",
+    "    ax1.plot(ts,0*ts+21.,ls=\"-.\")\n",
+    "    ax1.set_xlabel(\"Fecha\")\n",
+    "    ax1.set_ylabel(\"$\\\\tau$\")\n",
+    "    \n",
+    "    ax2 = ax1.twinx() \n",
+    "    \n",
+    "    activos = data_confirmed-data_death-data_recovered\n",
+    "    ts = np.array(range(len(activos)))\n",
+    "    values = activos[start:end]    \n",
+    "    ts = ts[start:end]\n",
+    "    ts = ts[(~np.isnan(values))]\n",
+    "    values = values[(~np.isnan(values))]\n",
+    "    ts = ts[values>0]\n",
+    "    values = values[values>0]\n",
+    "    lnvalues = np.log(values)        \n",
+    "    ln2 = ax2.scatter(ts,values,label=\"casos activos\", c=\"red\")\n",
+    "    ax2.set_ylabel(\"Casos activos\")\n",
+    "    \n",
+    "    try:\n",
+    "        fit = np.polyfit(ts-ts[0],lnvalues, 1, cov=False)\n",
+    "        print(\"Tiempo característico :\", 1/fit[0], \"dias.  Ordenada a t_0:\",np.exp(fit[1]))\n",
+    "        if mostrar_ajuste:\n",
+    "            plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=region)\n",
+    "    except:\n",
+    "        pass\n",
+    "    ax2.set_yscale(tipoescala)\n",
+    "    # plt.ylabel(\"$T_{duplicaci\\'on}$\")\n",
+    "    #plt.plot(np.log(newrecovered),label=\"nuevos recuperados\")\n",
+    "    #plt.plot(np.log(newdeaths),label=\"nuevos muertos\")\n",
+    "    ax1.set_title(\"Correlación entre $\\\\tau$ estimado y crecimiento de casos activos\")\n",
+    "    lines, labels = ax1.get_legend_handles_labels()\n",
+    "    lines2, labels2 = ax2.get_legend_handles_labels()\n",
+    "    ax2.legend(lines + lines2, labels + labels2, loc=0)\n",
+    "    plt.show()\n",
+    "    # plt.legend()\n",
+    "    \n",
+    "region3 = widgets.Dropdown(options=sorted([key for key in nodes]),\n",
+    "    description='Region:',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "startday3 =widgets.IntSlider(0,0,730,\n",
+    "    description='ajustar desde el día',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "endday3 =widgets.IntSlider(730,0,730,\n",
+    "    description='ajustar hasta el día',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "tipoescala3 = widgets.Dropdown(options=['log','linear'],\n",
+    "    description='tipo escala:',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "mostrar_ajuste3 = widgets.Checkbox(value=False, indent=True, description=\"Mostrar línea de tendencia\")\n",
+    "\n",
+    "interact=widgets.interact(mostrar_curva3, region=region3,start=startday3,end=endday3,tipoescala=tipoescala2,\n",
+    "                         mostrar_ajuste=mostrar_ajuste3)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
