--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -2,38 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-10T14:10:49.362451Z",
-     "start_time": "2020-04-10T14:10:49.359837Z"
-    }
-   },
-   "source": [
-    "# Levantar datos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Levantar Datos a nivel mundial (Fuente: John Hopkings University + Wikipedia)\n",
+    "\n",
+    "\n",
+    "La actualización de estos por país es automática, mientras que la de los casos en las provincias Argentinas debe hacerse manualmente. Por este motivo, los datos de las provincias argentinas sólo se actualizan cada cierto tiempo, de acuerdo a los reportes del ministerio de salud publicados en wikipedia (https://en.wikipedia.org/wiki/Template:COVID-19_pandemic_data/Argentina_medical_cases_by_province).\n",
+    "\n",
     "En lo siguiente, el día 1 corresponde al 22.01.2020, el día 11 \n",
     "al 01.02.2020, el día 39 al 01.03.2020, el día 62 al 01.04.2020 \n",
     "y el día 101 al 01.05.2020\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Levantar Datos a nivel mundial (Fuente: John Hopkings University + Wikipedia)\n",
-    "\n",
-    "\n",
-    "La actualización de estos por país es automática, mientras que la de los casos en las provincias Argentinas debe hacerse manualmente. Por este motivo, los datos de las provincias argentinas sólo se actualizan cada cierto tiempo, de acuerdo a los reportes del ministerio de salud publicados en wikipedia (https://en.wikipedia.org/wiki/Template:COVID-19_pandemic_data/Argentina_medical_cases_by_province)."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:12:29.967684Z",
@@ -286,7 +269,18 @@
     }
    },
    "source": [
-    "## Evolución  de los casos activos en diferentes paises"
+    "## Evolución  de los casos activos en diferentes paises y evolución del factor de contagio\n",
+    "\n",
+    "\n",
+    "Un parámetro importante que caracteriza la propagación de la enfermedad es el $r_0$, definido como el número medio de contagios que produce cada individuo infectado. Esta cantidad puede estimarse, de acuerdo al modelo SEIR, según\n",
+    "$$\n",
+    "r_0=\\frac{\\Delta C}{I}\n",
+    "$$\n",
+    "con $\\Delta C$ el cambio diario en el número de casos confirmados, e $I$ el número de infectados activos. \n",
+    "\n",
+    "$r_0$ es una cantidad que depende de la población susceptible, de la contagiosidad de la enfermedad, así como de diferentes prácticas culturales, aspectos genéticos de la población, y de las políticas sanitarias. \n",
+    "\n",
+    "La infección puede darse por \"controlada\", si el tiempo característico $\\tau=\\frac{\\ln(2)}{R_0}$ resulta mayor al tiempo de recuperación, de manera que los nuevos infectados no llegen a remplazar a los pacientes recuperados. Para el caso del COVID19, el tiempo de recuperación es de alrededor de 20 días, por lo que si $\\tau$ es menor que ese valor, es de esperarse un crecimiento exponencial en el número de infectados activos. La línea punteada corresponde a $\\tau=21$ días."
    ]
   },
   {
@@ -298,21 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-13T16:13:32.869859Z",
-     "start_time": "2020-08-13T16:13:32.516074Z"
-    },
     "hide_input": true,
-    "init_cell": true,
-    "scrolled": false
+    "init_cell": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a15a9ee933e40e2818b30f682135b69",
+       "model_id": "0b4aa47e4e9d41249aca2cd8c154c4ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,36 +321,33 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "mostrar_ajuste1 = widgets.Checkbox(value=False, indent=True, description=\"Mostrar línea de tendencia\")\n",
-    "\n",
-    "\n",
-    "region = widgets.Dropdown(options=sorted([key for key in nodes]),\n",
-    "    description='Region:',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "startday =widgets.IntSlider(0,0,730,\n",
-    "    description='ajustar desde el día',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "endday =widgets.IntSlider(730,0,730,\n",
-    "    description='ajustar hasta el día',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "tipoescala = widgets.Dropdown(options=['log','linear'],\n",
-    "    description='tipo escala:',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def mostrar_curva(region,start,end,tipoescala, mostrar_tendencia):\n",
+    "def mostrar_curva3(region,start,end,tipoescalal,tipoescalar,mostrar_ajuste):\n",
     "    data_confirmed = nodes[region][\"curve_confirmed\"]\n",
     "    data_death = nodes[region][\"curve_deaths\"]\n",
     "    data_recovered = nodes[region][\"curve_recovered\"]\n",
+    "    activos = data_confirmed-data_death-data_recovered\n",
+    "    newrecovered = data_recovered[1:]-data_recovered[:-1] # +data_deaths[1:]-data_deaths[:-1]\n",
+    "    newdeaths = data_deaths[1:]-data_deaths[:-1] # +data_deaths[1:]-data_deaths[:-1]\n",
+    "    newinfected = data_confirmed[1:]-data_confirmed[:-1]\n",
+    "    newconfirmed = data_confirmed[1:]-data_confirmed[:-1]\n",
+    "    ts = np.array(range(len(newinfected)))\n",
+    "    \n",
+    "    values = newconfirmed/activos[1:]\n",
+    "    ts = ts[start:end]\n",
+    "    values = values[start:end]    \n",
+    "    ts = ts[(~np.isnan(values))]\n",
+    "    values = values[(~np.isnan(values))]\n",
+    "    ts = ts[values>0]\n",
+    "    values = np.log(2)/values[values>0]\n",
+    "    lnvalues = np.log(values)\n",
+    "    fig, ax1 = plt.subplots()\n",
+    "    ln1 = ax1.scatter(ts, values,label=\"$\\\\tau$\",color=\"blue\")\n",
+    "    ax1.plot(ts,0*ts+21.,ls=\"-.\")\n",
+    "    ax1.set_xlabel(\"Fecha\")\n",
+    "    ax1.set_ylabel(\"$\\\\tau$\")\n",
+    "    \n",
+    "    ax2 = ax1.twinx() \n",
+    "    \n",
     "    activos = data_confirmed-data_death-data_recovered\n",
     "    ts = np.array(range(len(activos)))\n",
     "    values = activos[start:end]    \n",
@@ -371,20 +357,61 @@
     "    ts = ts[values>0]\n",
     "    values = values[values>0]\n",
     "    lnvalues = np.log(values)        \n",
-    "    plt.scatter(ts,values,label=region)\n",
+    "    ln2 = ax2.scatter(ts,values,label=\"casos activos\", c=\"red\")\n",
+    "    ax2.set_ylabel(\"Casos activos\")\n",
+    "    \n",
     "    try:\n",
     "        fit = np.polyfit(ts-ts[0],lnvalues, 1, cov=False)\n",
-    "        print(\"t duplicación:\", np.log(2.)/fit[0], \" ordenada al origen:\",np.exp(fit[1]))\n",
-    "        if mostrar_tendencia:\n",
-    "            plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=region)\n",
+    "        print(\"Tiempo característico :\", 1/fit[0], \"dias.  Ordenada a t_0:\",np.exp(fit[1]))\n",
+    "        if mostrar_ajuste:\n",
+    "            plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=\"ajuste\", color=\"red\")\n",
     "    except:\n",
     "        pass\n",
-    "    plt.yscale(tipoescala)\n",
-    "    plt.title(\"Número de casos activos en \" + region)\n",
+    "    ax1.set_yscale(tipoescalal)\n",
+    "    ax2.set_yscale(tipoescalar)\n",
+    "    # plt.ylabel(\"$T_{duplicaci\\'on}$\")\n",
+    "    #plt.plot(np.log(newrecovered),label=\"nuevos recuperados\")\n",
+    "    #plt.plot(np.log(newdeaths),label=\"nuevos muertos\")\n",
+    "    ax1.set_title(\"Correlación entre $\\\\tau$ estimado y crecimiento de casos activos\")\n",
+    "    lines, labels = ax1.get_legend_handles_labels()\n",
+    "    lines2, labels2 = ax2.get_legend_handles_labels()\n",
+    "    ax2.legend(lines + lines2, labels + labels2, loc=0)\n",
     "    plt.show()\n",
+    "    # plt.legend()\n",
     "    \n",
-    "interact=widgets.interact(mostrar_curva,region=region,start=startday,end=endday,tipoescala=tipoescala,\n",
-    "                         mostrar_tendencia=mostrar_ajuste1)"
+    "region3 = widgets.Dropdown(options=sorted([key for key in nodes]),\n",
+    "    description='Region:',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "startday3 =widgets.IntSlider(0,0,730,\n",
+    "    description='ajustar desde el día',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "endday3 =widgets.IntSlider(730,0,730,\n",
+    "    description='ajustar hasta el día',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "tipoescala3l = widgets.Dropdown(options=['log','linear'],\n",
+    "    description='tipo escala izquierda:',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "tipoescala3r = widgets.Dropdown(options=['log','linear'],\n",
+    "    description='tipo escala derecha:',\n",
+    "    ensure_option=True,\n",
+    "    disabled=False)\n",
+    "\n",
+    "mostrar_ajuste3 = widgets.Checkbox(value=False, indent=True, description=\"Mostrar línea de tendencia\")\n",
+    "\n",
+    "interact=widgets.interact(mostrar_curva3, region=region3,start=startday3,end=endday3,\n",
+    "                          tipoescalal=tipoescala3l,\n",
+    "                          tipoescalar=tipoescala3r,\n",
+    "                         mostrar_ajuste=mostrar_ajuste3)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -393,20 +420,12 @@
    "source": [
     "## Evolución de  $R_0$.\n",
     "\n",
-    "Un parámetro importante que caracteriza la propagación de la enfermedad es el $r_0$, definido como el número medio de contagios que produce cada individuo infectado. Esta cantidad puede estimarse, de acuerdo al modelo SEIR, según\n",
-    "$$\n",
-    "r_0=\\frac{\\Delta C}{I}\n",
-    "$$\n",
-    "con $\\Delta C$ el cambio diario en el número de casos confirmados, e $I$ el número de infectados activos. \n",
-    "\n",
-    "$r_0$ es una cantidad que depende de la población susceptible, de la contagiosidad de la enfermedad, así como de diferentes prácticas culturales, aspectos genéticos de la población, y de las políticas sanitarias. \n",
-    "\n",
-    "La infección puede darse por \"controlada\", si el tiempo característico $\\tau=\\frac{\\ln(2)}{R_0}$ resulta mayor al tiempo de recuperación, de manera que los nuevos infectados no llegen a remplazar a los pacientes recuperados. Para el caso del COVID19, el tiempo de recuperación es de alrededor de 20 días, por lo que si $\\tau$ es menor que ese valor, es de esperarse un crecimiento exponencial en el número de infectados activos. La línea punteada corresponde a $\\tau=21$ días."
+    "Aquí analiza la dinámica de la tasa de infección inversa. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-13T16:57:14.242418Z",
@@ -419,7 +438,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85e58f55f9df47eb893e2a21a1da871a",
+       "model_id": "62d4e77de4b74aa8b3fe956159e7f93b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -495,121 +514,6 @@
     "\n",
     "interact=widgets.interact(mostrar_curva2, region=region2,start=startday2,end=endday2,tipoescala=tipoescala2,\n",
     "                         mostrar_ajuste=mostrar_ajuste2)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-08-13T16:57:14.242418Z",
-     "start_time": "2020-08-13T16:57:13.780115Z"
-    },
-    "hide_input": false,
-    "init_cell": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a78b5a799c84449a40033174260e609",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='Region:', options=('Argentina', 'Argentina-Buenos Aires', 'Argenti…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "def mostrar_curva3(region,start,end,tipoescala,mostrar_ajuste):\n",
-    "    data_confirmed = nodes[region][\"curve_confirmed\"]\n",
-    "    data_death = nodes[region][\"curve_deaths\"]\n",
-    "    data_recovered = nodes[region][\"curve_recovered\"]\n",
-    "    activos = data_confirmed-data_death-data_recovered\n",
-    "    newrecovered = data_recovered[1:]-data_recovered[:-1] # +data_deaths[1:]-data_deaths[:-1]\n",
-    "    newdeaths = data_deaths[1:]-data_deaths[:-1] # +data_deaths[1:]-data_deaths[:-1]\n",
-    "    newinfected = data_confirmed[1:]-data_confirmed[:-1]\n",
-    "    newconfirmed = data_confirmed[1:]-data_confirmed[:-1]\n",
-    "    ts = np.array(range(len(newinfected)))\n",
-    "    \n",
-    "    values = newconfirmed/activos[1:]\n",
-    "    ts = ts[start:end]\n",
-    "    values = values[start:end]    \n",
-    "    ts = ts[(~np.isnan(values))]\n",
-    "    values = values[(~np.isnan(values))]\n",
-    "    ts = ts[values>0]\n",
-    "    values = np.log(2)/values[values>0]\n",
-    "    lnvalues = np.log(values)\n",
-    "    fig, ax1 = plt.subplots()\n",
-    "    ln1 = ax1.scatter(ts, values,label=\"$\\\\tau$\",color=\"blue\")\n",
-    "    ax1.plot(ts,0*ts+21.,ls=\"-.\")\n",
-    "    ax1.set_xlabel(\"Fecha\")\n",
-    "    ax1.set_ylabel(\"$\\\\tau$\")\n",
-    "    \n",
-    "    ax2 = ax1.twinx() \n",
-    "    \n",
-    "    activos = data_confirmed-data_death-data_recovered\n",
-    "    ts = np.array(range(len(activos)))\n",
-    "    values = activos[start:end]    \n",
-    "    ts = ts[start:end]\n",
-    "    ts = ts[(~np.isnan(values))]\n",
-    "    values = values[(~np.isnan(values))]\n",
-    "    ts = ts[values>0]\n",
-    "    values = values[values>0]\n",
-    "    lnvalues = np.log(values)        \n",
-    "    ln2 = ax2.scatter(ts,values,label=\"casos activos\", c=\"red\")\n",
-    "    ax2.set_ylabel(\"Casos activos\")\n",
-    "    \n",
-    "    try:\n",
-    "        fit = np.polyfit(ts-ts[0],lnvalues, 1, cov=False)\n",
-    "        print(\"Tiempo característico :\", 1/fit[0], \"dias.  Ordenada a t_0:\",np.exp(fit[1]))\n",
-    "        if mostrar_ajuste:\n",
-    "            plt.plot(ts,np.exp(fit[0]*(ts-ts[0])+fit[1]),label=region)\n",
-    "    except:\n",
-    "        pass\n",
-    "    ax2.set_yscale(tipoescala)\n",
-    "    # plt.ylabel(\"$T_{duplicaci\\'on}$\")\n",
-    "    #plt.plot(np.log(newrecovered),label=\"nuevos recuperados\")\n",
-    "    #plt.plot(np.log(newdeaths),label=\"nuevos muertos\")\n",
-    "    ax1.set_title(\"Correlación entre $\\\\tau$ estimado y crecimiento de casos activos\")\n",
-    "    lines, labels = ax1.get_legend_handles_labels()\n",
-    "    lines2, labels2 = ax2.get_legend_handles_labels()\n",
-    "    ax2.legend(lines + lines2, labels + labels2, loc=0)\n",
-    "    plt.show()\n",
-    "    # plt.legend()\n",
-    "    \n",
-    "region3 = widgets.Dropdown(options=sorted([key for key in nodes]),\n",
-    "    description='Region:',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "startday3 =widgets.IntSlider(0,0,730,\n",
-    "    description='ajustar desde el día',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "endday3 =widgets.IntSlider(730,0,730,\n",
-    "    description='ajustar hasta el día',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "tipoescala3 = widgets.Dropdown(options=['log','linear'],\n",
-    "    description='tipo escala:',\n",
-    "    ensure_option=True,\n",
-    "    disabled=False)\n",
-    "\n",
-    "mostrar_ajuste3 = widgets.Checkbox(value=False, indent=True, description=\"Mostrar línea de tendencia\")\n",
-    "\n",
-    "interact=widgets.interact(mostrar_curva3, region=region3,start=startday3,end=endday3,tipoescala=tipoescala2,\n",
-    "                         mostrar_ajuste=mostrar_ajuste3)\n",
     "\n",
     "\n"
    ]
