--- a/notebooks/Bajar Datos.ipynb
+++ b/notebooks/Bajar Datos.ipynb
@@ -22,7 +22,7 @@
      "end_time": "2020-08-13T16:12:29.967684Z",
      "start_time": "2020-08-13T16:12:25.045646Z"
     },
-    "hide_input": true,
+    "hide_input": false,
     "init_cell": true
    },
    "outputs": [
@@ -58,10 +58,16 @@
     "\n",
     "\n",
     "populations = pandas.read_csv(\"https://raw.githubusercontent.com/datasets/population/master/data/population.csv\")\n",
-    "populations[populations[\"Country Name\"]==\"United States\"]\n",
-    "populations=populations.append({\"Country Name\":\"US\",\"Country Code\":\"USA\", \"Year\":2020,\"Value\":323127513.},ignore_index=True )\n",
-    "populations=populations.append({\"Country Name\":\"Korea, South\",\"Country Code\":\"SKorea\", \"Year\":2020,\"Value\":51606633},ignore_index=True )\n",
     "\n",
+    "populations[populations[\"Country Name\"]==\"United States\"]\n",
+    "#populations=pandas.concat([populations]+[pandas.DataFrame([[\"US\",\"USA\",2020, 323127513]], \n",
+    "#                                                          columns=[\"Country Name\", \"Country Code\",\"Year\",\"Value\"])],\n",
+    "#                          ignore_index=True)\n",
+    "#populations.append({\"Country Name\":\"US\",\"Country Code\":\"USA\", \"Year\":2020,\"Value\":323127513.},ignore_index=True )\n",
+    "#populations=populations.append({\"Country Name\":\"Korea, South\",\"Country Code\":\"SKorea\", \"Year\":2020,\"Value\":51606633},ignore_index=True )\n",
+    "#populations=pandas.concat([populations]+[pandas.DataFrame([[\"Korea, South\",\"SKorea\",2020, 51606633]], \n",
+    "#                                                          columns=[\"Country Name\", \"Country Code\",\"Year\",\"Value\"])],\n",
+    "#                          ignore_index=True)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -187,7 +193,7 @@
     "\n",
     "\n",
     "        nodes[key]={\"coordinates\":coords,\n",
-    "                    \"population\": population,\n",
+    "                    \"population\": -1 if np.isnan(population) else int(population) ,\n",
     "                    \"initial_infected\":data_infected[initial_day],\n",
     "                    \"initial_day\" : initial_day,\n",
     "                    \"aexp\":infection_rate,\n",
@@ -301,7 +307,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b4aa47e4e9d41249aca2cd8c154c4ed",
+       "model_id": "b199bc278b8742fa83ff1a7c8652daa4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -438,7 +444,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62d4e77de4b74aa8b3fe956159e7f93b",
+       "model_id": "ab9e1d86881b41f68e1d450146d353f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -543,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.12.0"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
